[package]
name        = "aozora-lex"
description = "Aozora notation lexer — fused streaming pipeline (Move 2 of the 0.2.0 plan)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
aozora-spec     = { workspace = true }
aozora-syntax   = { workspace = true }
aozora-encoding = { workspace = true }
aozora-scan     = { workspace = true }
aozora-veb      = { workspace = true }
bumpalo         = { workspace = true }
memchr          = { workspace = true }

# Phase migration in progress: we now own phase 1 (tokenize) via
# aozora-scan, and orchestrate the rest by calling aozora-lexer's
# phase 0 / 2 / 3 / 4 / 6 functions. Each subsequent commit folds
# one more phase into this crate; once all of them are absorbed the
# aozora-lexer dep drops.
aozora-lexer    = { workspace = true }

[dev-dependencies]
proptest          = { workspace = true }
aozora-test-utils = { workspace = true }
criterion         = { workspace = true }
insta             = { workspace = true }

[[bench]]
name    = "tokenize_compare"
harness = false
