[package]
name        = "aozora-lex"
description = "Aozora notation lexer — fused streaming pipeline producing a borrowed-arena AST"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
aozora-spec     = { workspace = true }
aozora-syntax   = { workspace = true }
aozora-encoding = { workspace = true }
aozora-scan     = { workspace = true }
aozora-veb      = { workspace = true }
bumpalo         = { workspace = true }
memchr          = { workspace = true }

# This crate orchestrates phases 0 / 2 / 3 / 4 / 6 by calling the
# matching functions from `aozora-lexer`; phase 1 (tokenize) is
# owned directly by `aozora-scan` above.
aozora-lexer    = { workspace = true }


[dev-dependencies]
proptest          = { workspace = true }
aozora-test-utils = { workspace = true }
criterion         = { workspace = true }
insta             = { workspace = true }

[[bench]]
name    = "tokenize_compare"
harness = false
