[package]
name        = "aozora-lexer"
description = "Pure-functional 7-phase lexer for Aozora Bunko notation"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[features]
default = []
# Opt-in phase 3 sub-system instrumentation. When enabled, the
# `phase3_classify` recogniser entry points push their elapsed-ns into
# a thread-local `instrumentation::TimingTable` keyed by `Subsystem`.
# The `aozora-bench` `phase3_subsystems` example reads this table.
# Default OFF: every guard collapses to dead code at compile time so
# release builds pay zero cost.
phase3-instrument = []

[dependencies]
aozora-spec     = { workspace = true }
aozora-syntax   = { workspace = true }
aozora-encoding = { workspace = true }
aho-corasick = { workspace = true }
memchr       = { workspace = true }
smallvec     = { workspace = true }
thiserror    = { workspace = true }
miette       = { workspace = true }
phf          = { workspace = true }

[dev-dependencies]
insta     = { workspace = true }
proptest  = { workspace = true }
criterion = { workspace = true }
# The classify_kaeriten bench drives the public borrowed-pipeline
# entry point so its measurement covers what production callers
# actually run.
aozora-lex    = { workspace = true }
aozora-syntax = { workspace = true }

[[bench]]
name    = "classify_kaeriten"
harness = false
