[package]
name        = "aozora-lexer"
description = "Pure-functional 7-phase lexer for Aozora Bunko notation"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[features]
default = []
# Opt-in phase 3 sub-system instrumentation. When enabled, the
# `phase3_classify` recogniser entry points push their elapsed-ns into
# a thread-local `instrumentation::TimingTable` keyed by `Subsystem`.
# The `aozora-bench` `phase3_subsystems` example reads this table.
# Default OFF: every guard collapses to dead code at compile time so
# release builds pay zero cost.
phase3-instrument = []
# M-3 / ADR-0019 — opt-in flat state machine dispatcher for Phase 3.
# When enabled, `ClassifyStream::process_event` delegates to a
# table-driven (state, event) → ActionList dispatch instead of the
# default cross-cutting if/match cascade. Comparative measurement
# only — promotion / revert decision lives in ADR-0019.
phase3-fsm = []

[dependencies]
aozora-spec     = { workspace = true }
aozora-syntax   = { workspace = true }
aozora-encoding = { workspace = true }
aozora-scan     = { workspace = true }
aho-corasick = { workspace = true, features = ["std"] }
bumpalo      = { workspace = true }
memchr       = { workspace = true }
smallvec     = { workspace = true }
thiserror    = { workspace = true }
miette       = { workspace = true }
phf          = { workspace = true }

[dev-dependencies]
insta     = { workspace = true }
proptest  = { workspace = true }
criterion = { workspace = true }
# The classify_kaeriten bench drives the public borrowed-pipeline
# entry point so its measurement covers what production callers
# actually run.
aozora-lex    = { workspace = true }
aozora-syntax = { workspace = true }

[[bench]]
name    = "classify_kaeriten"
harness = false
