[package]
name        = "aozora-parser"
description = "Aozora Bunko notation parser: lex → parse → serialize round-trip + per-node HTML render"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
readme.workspace      = true
keywords.workspace    = true
categories.workspace  = true

[lints]
workspace = true

[dependencies]
aozora-syntax   = { workspace = true }
aozora-lex      = { workspace = true }
# Phase migration: legacy lexer types (PairKind etc.) are still
# imported by name in some modules. They re-export through aozora-lex
# now, but a few internal modules (segment.rs) still reach for
# crate-private items that haven't moved. Once Move 2's fused engine
# absorbs aozora-lexer entirely, this dep drops.
aozora-lexer    = { workspace = true }
aozora-encoding = { workspace = true }
unicode-segmentation = { workspace = true }
miette               = { workspace = true }
thiserror            = { workspace = true }
tracing              = { workspace = true }
# `parallel` feature pulls in rayon; sequential builds skip it.
rayon                = { workspace = true, optional = true }

[dev-dependencies]
aozora-corpus     = { workspace = true }
aozora-test-utils = { workspace = true }
insta             = { workspace = true }
proptest          = { workspace = true }
pretty_assertions = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
criterion         = { workspace = true }
# Always available for examples / benches even when the parallel
# feature is off (an example is "is rayon faster than sequential?").
rayon             = { workspace = true }

[[bench]]
name    = "incremental_fastpath"
harness = false

[[bench]]
name    = "parallel_parse"
harness = false

[features]
default = ["html", "parallel"]
# HTML renderer. Enabled by default but kept behind a feature so downstream
# consumers can parse + serialize without pulling in the renderer.
html = []
# Transparent intra-document parallel parse. With this feature on
# (default), `parse()` automatically dispatches to the parallel path
# for inputs above PARALLEL_THRESHOLD; smaller inputs and inputs with
# a single segment go through the original sequential path. Turning
# this off compiles out rayon entirely.
parallel = ["dep:rayon"]
