[package]
name        = "aozora-render"
description = "HTML / serialisation renderers for the aozora AST"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
# Borrowed-AST native renderers (Plan B.5). The aozora-parser dep
# was retired in Plan B.5 — the legacy owned-AST renderers no
# longer have any public consumer. `aozora-parser` itself remains as
# an internal-test artifact (its proptest suite continues to pin
# the lex-pipeline equivalence with the legacy comrak-driven path).
aozora-spec   = { workspace = true }
aozora-syntax = { workspace = true }
aozora-lex    = { workspace = true }
memchr        = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest          = { workspace = true }
