[package]
name        = "aozora-render"
description = "HTML / serialisation renderers for the aozora AST"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
aozora-spec     = { workspace = true }
aozora-syntax   = { workspace = true }
aozora-pipeline = { workspace = true }
memchr          = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest          = { workspace = true }
