[package]
name        = "aozora-scan"
description = "SIMD-friendly trigger-byte scanner for the Aozora notation lexer"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

# Internal — crate is path-only until the public `aozora` facade ships
# on crates.io.
publish     = false

# NOTE: aozora-scan does NOT inherit the workspace
# `unsafe_code = "forbid"` lint. SIMD intrinsics
# (`std::arch::x86_64::*`, `std::arch::aarch64::*`, etc.) are
# `unsafe fn`, and the `#[target_feature]` annotations they require
# are themselves unsafe. The `unsafe` surface is quarantined to the
# `backends/{structural_bitmap,neon,wasm_simd}.rs` files; the rest of
# the crate stays under `unsafe_code = "deny"` so a stray unsafe
# block in the dispatcher / wrapper code surfaces immediately.
[lints.rust]
unsafe_code = "deny"
non_ascii_idents = "deny"
missing_debug_implementations = "warn"

[features]
default = ["std"]
# `std` enables runtime CPU dispatch via `is_x86_feature_detected!`
# (the `BackendChoice::detect` path) and the `OnceLock` cache that
# memoises the dispatcher's choice across parses. Without `std`,
# `BackendChoice::ScalarTeddy` is the only kernel reachable from
# `scan_offsets_in`.
std = []

[dependencies]
aozora-spec = { workspace = true }
bumpalo     = { workspace = true }
memchr      = { workspace = true }

[dev-dependencies]
proptest        = { workspace = true }
aozora-proptest = { workspace = true }
criterion       = { workspace = true }

[[bench]]
name    = "scanner_bakeoff"
harness = false
