[package]
name        = "aozora-spec"
description = "Aozora Bunko notation: canonical specification (sentinels, span, trigger/pair kinds, diagnostics)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true
publish     = false

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
miette    = { workspace = true }
phf       = { workspace = true }
serde     = { workspace = true, optional = true }

[dev-dependencies]
proptest        = { workspace = true }
aozora-proptest = { workspace = true }

[features]
default = []
serde   = ["dep:serde"]
