[package]
name        = "aozora-syntax"
description = "Aozora Bunko notation: AST types (ruby, bouten, 縦中横, 外字, kaeriten, indent containers)"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
readme.workspace      = true
keywords.workspace    = true
categories.workspace  = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
miette    = { workspace = true }
serde     = { workspace = true, optional = true }

[features]
default = []
serde   = ["dep:serde"]

[dev-dependencies]
insta = { workspace = true }
