[package]
name        = "aozora-wasm"
description = "WASM driver for the aozora parser — wasm-bindgen + wasm-pack distribution"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

# Driver crate — built into a `pkg/` directory via `wasm-pack build
# --target web --release crates/aozora-wasm`. Host (cargo workspace)
# builds skip the wasm-bindgen exports unless the wasm32 target is
# selected.
publish     = false

[lints]
workspace = true

# wasm-bindgen + js-sys are pulled in only when targeting wasm32, so
# host (x86_64 / aarch64) builds of the workspace skip them entirely.
# Without these targets the crate compiles to a zero-cost passthrough
# library that re-exports the underlying types unchanged.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen          = "0.2"
serde-wasm-bindgen    = "0.6"

[dependencies]
aozora     = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]

# wasm-pack metadata.
#
# We bypass wasm-pack's bundled wasm-opt because the version it
# downloads (binaryen pre-119) cannot validate the bulk-memory
# opcodes (memory.copy / memory.fill) that Rust 1.95+ emits for the
# core::ptr / Vec primitives this crate transitively pulls in. The
# Dockerfile's `wasm-builder` stage runs a fresh `wasm-opt -O3
# --enable-bulk-memory --enable-mutable-globals` over the artifact
# before it lands at /aozora.wasm, so the size optimisation still
# happens — just with a current binaryen build instead of the stale
# bundle.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
