[package]
name        = "aozora-xtask"
description = "Developer-side tooling for the aozora workspace (samply profile wrappers, etc.). Runs on the host — does not go through the Docker dev image because perf_event_open and clock_gettime need direct kernel access."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true
publish     = false

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap            = { workspace = true }
aozora          = { workspace = true, features = ["schema"] }
aozora-corpus   = { workspace = true }
aozora-encoding = { workspace = true }
aozora-trace    = { workspace = true }
blake3          = { workspace = true }
rayon           = { workspace = true }
regex           = { workspace = true }
rustix          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
walkdir         = { workspace = true }
zstd            = { workspace = true }
