[package]
name        = "aozora"
description = "Aozora Bunko notation parser — single front door (Document + AozoraTree)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
# Borrowed-AST native surface (Plan B + I-2.2 complete).
# Document wraps `aozora_lex::lex_into_arena` and AozoraTree borrows
# from a `bumpalo`-backed arena owned by Document.
aozora-render   = { workspace = true }
aozora-lex      = { workspace = true }
aozora-syntax   = { workspace = true }
aozora-spec     = { workspace = true }
