[package]
name        = "aozora"
description = "Aozora Bunko notation parser — single front door (Document + AozoraTree)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
# Document wraps `aozora_lex::lex_into_arena` and AozoraTree borrows
# from a `bumpalo`-backed arena owned by Document.
aozora-render   = { workspace = true }
aozora-lex      = { workspace = true }
aozora-syntax   = { workspace = true }
aozora-spec     = { workspace = true }

[dev-dependencies]
# Used by `tests/corpus_sweep.rs` to walk `AOZORA_CORPUS_ROOT` and
# verify parse + round-trip invariants on every document.
aozora-corpus   = { workspace = true }
aozora-encoding = { workspace = true }
