[package]
name = "aozora-encoding-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
aozora-encoding = { path = ".." }

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode_sjis"
path = "fuzz_targets/decode_sjis.rs"
test = false
doc = false
bench = false
