[package]
name = "aozora-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys   = "0.4"
aozora-parser   = { path = ".." }
aozora-lexer    = { path = "../../aozora-lexer" }
aozora-encoding = { path = "../../aozora-encoding" }

# Prevent this crate from joining the aozora workspace.
# Each fuzz target needs libfuzzer-sys (nightly-gated), which the
# workspace-wide `cargo build --workspace` should not pick up.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse_render"
path = "fuzz_targets/parse_render.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sjis_decode"
path = "fuzz_targets/sjis_decode.rs"
test = false
doc = false
bench = false
